// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugin-svelte > should add svelte loader properly 1`] = `
[
  "{
  resolve: {
    extensions: [
      '.svelte'
    ]
  },
  module: {
    rules: [
      /* config.module.rule('svelte') */
      {
        test: /.svelte$/,
        use: [
          /* config.module.rule('svelte') */
          {
            loader: '<ROOT>/node_modules/<PNPM_INNER>/svelte-loader/index.js',
            options: {
              compilerOptions: {
                dev: true
              },
              emitCss: false,
              hotReload: true
            }
          }
        ]
      }
    ]
  }
}",
]
`;

exports[`plugin-svelte > should set dev and hotReload to false in production mode 1`] = `
[
  "{
  resolve: {
    extensions: [
      '.svelte'
    ]
  },
  module: {
    rules: [
      /* config.module.rule('svelte') */
      {
        test: /.svelte$/,
        use: [
          /* config.module.rule('svelte') */
          {
            loader: '<ROOT>/node_modules/<PNPM_INNER>/svelte-loader/index.js',
            options: {
              compilerOptions: {
                dev: false
              },
              emitCss: true,
              hotReload: false
            }
          }
        ]
      }
    ]
  }
}",
]
`;
